package com.example.demo.services.belastingberekenen;

public interface Belastingberekenen {
    double berekenen(double geld);
}
