@startuml

' *** controlers ***
class UserController{
 + niewueUser(NieweUser: RequestNieuweUser): ResponseEntity
  + getUser(id: Long): ResponseEntity
}

class BelastingController{
 + NieuweInkomenBelasting(id: Long, inkomen: Double, jaar: Int): ResponseEntity
}

'-----------------



' *** Services ***
class UserService{
+niewueUser()
 + niewueUser(user: RequestNieuweUser): ResponseUser
 + GetUser(id: Long): ResponseUser
 + BestondAlDitEmail(email: String): Boolean
}

class BelastingService{
 + NieuweInkomenBelastingToevoegen(id: Long, inkomen: Double, jaar: Int): List<ResponseBelasting>
 + BestondAlInkomenBelasting(id: Long, jaar: Int): Boolean
 -nieuweBelastingmaken()
}

'*** package belastingbereken ***
interface Belastingberekenen{
+ berekenen(geld: Double): Double
}

class Inkomenbelastingberekenen{
+ berekenen(geld: Double): Double
}
'-----------------



' *** models ***
' Entities
class UserEntity {
  - id: Long
  - voorNaam: String
  - achterNaam: String
  - email: String
  - isAdmin: Boolean
  - belastingen: List<BelastingEntity>
}
class BelastingEntity {
  - id: Long
  - user: UserEntity
  - belastingsoort: String
  - belastingJaar: Int
  - inkomen: Double
  - belastingBedrag: Double
}

' DTOs
class RequestNieuweUser {
  - voorName: String
  - achterName: String
  - email: String
  - password: String
  - isAdmin: Boolean
}
class RequestNieuweBelasting {
  - userid: Long
  - belastingsoort: String
  - belastingJaar: Int
  - inkomem: Double
  - belastingBedrag: Double
}
class ResponseUser {
  + NaarDTO(user: UserEntity): ResponseUser
}
class ResponseBelasting {
  + NaarDTO(belasting: BelastingEntity): ResponseBelasting
}

'-----------------


' *** DataBase ***
class BelastingRepo {
  + existsByUserIdAndBelastingJaarAndBelastingsoort(userId: Long, jaar: Int, soort: String): Boolean
}

class UserRepo {
  + existsByEmail(email: String): Boolean
}

' *** Relations ***
UserController --> UserService
BelastingController --> BelastingService

UserService  --> UserRepo
BelastingService --> BelastingRepo
BelastingService --> UserRepo

UserEntity "1" -- "0..*" BelastingEntity : heeft
BelastingEntity "1" -- "1" UserEntity : behoort tot

UserService "1" -- "1" UserEntity : werkt met
BelastingService "1" -- "1" BelastingEntity : werkt met

UserController -- RequestNieuweUser : gebruikt
UserController --  ResponseUser : retourneert
BelastingController -- RequestNieuweBelasting : gebruikt
BelastingController --  ResponseBelasting : retourneert

BelastingService "1" -- "1" Belastingberekenen : gebruikt
Belastingberekenen <|-- Inkomenbelastingberekenen : implementeert

@enduml